# Resume-Analyzer

./: .gitignore  GOOGLE_INTERNSHIP_READINESS.md  QUICKSTART.md  README.md  README_V2.md  SETUP_COMPLETE.md  TESTING.md  UPGRADE_SUMMARY.md
.github/: copilot-instructions.md
backend/: .env.example  .pylintrc  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/app/services/: gemini_service.py
backend/tests/: test_api.py
frontend/: .eslintrc.json  index.html  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AnalysisResult.jsx  ResumeAnalyzer.jsx
frontend/src/styles/: AnalysisResult.css  ResumeAnalyzer.css
