[tool.poetry]
name = "resume-analyzer-backend"
version = "0.1.0"
description = "FastAPI backend for Resume Analyzer using Gemini API"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-dotenv = "^1.0.0"
google-generativeai = "^0.3.0"
pydantic = "^2.0.0"
python-multipart = "^0.0.6"
cors = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
